Fixed missing background-color expansion-box

--- a/src/components/ExpansionBox/_expansion-box.scss
+++ b/src/components/ExpansionBox/_expansion-box.scss
@@ -1,6 +1,7 @@
 .ssb-expansion-box {
   border: 1px solid $ssb-green-4;
   border-radius: 8px;
+  background-color: $ssb-white;
   display: grid;
   width: 100%;
 
